Fix small dot being visible on Mobile Safari
Looks like `stroke-dasharray` with a gap set to 200 and a dash set to 0
does not work on Mobile Safari. The dash size is definitely not equal to
0 since it is still visible. The solution is to use `stroke-dashoffset`
and offset the path by 1 pixel so that it overflows its container and
gets hidden.

--- a/_sass/_posts/_top-movies.scss
+++ b/_sass/_posts/_top-movies.scss
@@ -30,6 +30,7 @@
 
     .line {
       stroke-dasharray: 0 200;
+      stroke-dashoffset: 1;
       transition: stroke-dasharray 300ms ease;
     }
 
